--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wyndy's Page! &#128187;</title>
-    <link rel="icon" type="image/x-icon" href="/Wyndys Page/Images/myfavicon.png">
+    <link rel="icon" type="image/x-icon" href="./Wyndys Page/Images/myfavicon.png">
     <!--The following links are included for a web-based font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -65,7 +65,7 @@
 <body>
     <header id="page-header">
         <h1>Wyndy's Page</h1>
-        <img src="/Wyndys Page/Images/traffic-cone.png" style="width: 120px; height: 35px;" />
+        <img src="./Wyndys Page/Images/traffic-cone.png" style="width: 120px; height: 35px;" />
         <h5><em>...is a work in progress</em>&#128517</h5>
         <nav>
             <ul>
